static/css/main.css
/* ... */
.species-moves-title{
    text-align: center;
    background-color: var(--colorC);
    font-size: 2vmax;
}
.species-move-list{
    flex-grow: 1;
    overflow-y: scroll;
}
.species-move-list > *{
    border-bottom: var(--shadow);
    border-bottom-style: dashed;
    border-bottom-width: 1px;
}
.species-levelup-row{
    display: flex;
    cursor: pointer;
}

#species-evos{
    display: flex;
    flex-direction: column;
}
.evo-into{
    display: flex;
    align-items: center;
    justify-content: center;
}

.specie-block{
    display: flex;
    align-items: center;
}

.species-levelup-lvl{
    width: 1.5em;
    background-color: var(--colorC);
}
.species-levelup-name{
    width: 100%;
}


.specie-locs{
    cursor: pointer;
    height: fit-content;
}

.species-move-list>*:hover, .trainers-pokemon:hover, .specie-locs:hover, .specie-block:hover{
    background-color: var(--selHover);
    cursor: pointer;
    user-select: none;
}
#learnset{
    background-color: var(--colorD);
}

#tmhm{
    background-color: var(--colorB);
}
#eggmoves{
    background-color: var(--colorD);
}

.sprite{
    height: 30px;
}

@media (orientation: landscape) {
    .data-list{
        height: 90vh;
        overflow-y: scroll;
        flex-direction: column;
        background-color: var(--selNActive);
        width: 15vw;
    }
    .data-list-row{
        min-height: 2em;
        min-width: fit-content;
        overflow-y: scroll;
        padding: 10px;
        overflow: hidden;
    }
    .data-data{
        height: 100%;
    }
    .species-top{
        height: 15vw;
    }
    #species-front{
        height: 15vw;
        width: 15vw;
    }
}

@media (orientation: portrait) {
    .panel{
        flex-direction: column;
    }
    .data-list{
        width: 100%;
        height: 8vh;
        overflow-x: scroll;
        overflow-y: hidden;
        flex-direction: row;
        margin-bottom: auto;
    }
    .data-list-row{
        min-width: 6em;
    }
    .data-data{
        height: 72vh;
        width: 100%;
    }
    .species-top{
        height: 15vh;
    }
    #species-front{
        height: 15vh;
        width: 15vh;
    }
    
}

/* LOCATIONS */
#locations-data{
    flex-direction: row;
    flex-flow: row wrap;
    justify-content: center;
    overflow-y: scroll;
}
.location-table{
    width: fit-content;
    text-align: center;
    width: 12em;
}
.location-field{
    margin: auto;
    box-shadow: inset 0 0 1px rgb(44, 8, 2);
    overflow-y: scroll;
}
.location-title{
    background-color: var(--colorD);
    text-align: center;
}
.location-row{
    display: flex;
    background-color: var(--colorA);
    justify-content: space-between;
}
.location-specie{
    width: 6em;
    flex-grow: 1;
}
.location-rate{
    width: 2em;
}
.location-lvl{
    width: 3em;
}

.location-rod{
    background-color: var(--colorE);
}

/* Trainers */
.trainers-infobar{
    display: flex;
}
#trainers-rematch{
    margin-left: auto;
    display: flex
}
.trainer-match-btn{
    min-width: 1em;
    border: 2px ridge var(--colorB);
    text-align: center;
    margin-left: 0.2em;
}
#trainers-team{
    overflow-y: scroll;
}
.trainers-pokemon{
    margin-left: 0.5vw;
    margin-right: 0.5vw;
    background-color: var(--colorD);
    text-align: center;
    display: flex;
    border-bottom: rgb(49, 44, 44);
    border-bottom-width: medium;
    border-bottom-style: none;
    border-bottom-style: dashed;
    border-bottom-width: 1px;
    cursor: pointer;
}
.trainers-pokemon-left{
    width: 30%;
}
.trainers-pokemon-mid{
    width: 30%;
}
.trainers-pokemon-right{
    width: 40%;
}
.trainers-poke-ivs, .trainers-poke-evs, .trainers-poke-move{
    text-align: left;
    padding-left: 0.3em;
}
.trainers-poke-move{

}
@media (orientation: landscape) {
    
}

@media (orientation: portrait) {
    
}

/* SETTINGS */
#settings-frame{
    z-index: 10;
    width: 80vw;
    height: 80vh;
    margin: 10vh 10vh 10vw 10vw;
    background-color: var(--colorA);
    position: absolute;
    top: 0;
    border: 5px ridge var(--colorB);
    font-size: 2em;
}
.versionning > select{
    margin-top: -1px;
    vertical-align: middle;
}
.settings-row{
    
}
.settings-row > input[type='radio'] { 
    transform: scale(2); 
    margin-top: -1px;
    vertical-align: middle;
}
.settings-row > * {
    margin-right: 2%;
    height: 100%;
}


/* SEARCH */
#filter-frame{
    position: absolute;
    z-index: 11; /* 10 would be reserved to a invisible click to close filer with 100% height and with */
    background-color: var(--colorB);
    margin: auto;
}
.filter-panel{
    min-height: 50%;
    width: 100%;
}
.filter-title{
    width: 100%;
    background-color: var(--colorA);
}

.filter-panel, .filter-data{
    display: flex;
    flex-direction: column;
}
.filter-data{
    width: 100%;
}
.filter-data > *{
    margin: auto;
}
.filter-field{
    display: flex;
}

.filter-field *{
    padding-top: 0.1em;
    padding-bottom: 0.1em;
}
.filter-not{
    padding-left: 0.1em;
    border-radius: 10px 0 0 10px;
}
.filter-not-not{
    text-decoration: line-through;
    text-decoration-style: double;
    text-decoration-thickness: 2px;
}
.filter-key-wrapper{
    position: relative;
    display: flex;
    width: 3em;
}
.filter-key{
    width: 100%;
    background: rgba(0, 0, 0, 0);
    border-radius: 10px 0 0 10px;
    border-color: var(--selActive);
    border-style: solid;
    color: var(--font-color);
    font-size: 1.5vmax;
}
.filter-key-absolute{
    position: absolute;

}
.filter-key-selection > option:hover{
    background-color: var(--selHover);
}
.filter-key-selection > option{
    background-color: var(--colorC);
}
.filter-label{
    
}
.filter-search{
    font-size: 1.6vmax;
    text-align: center;
    padding-left: 7px;
    border-radius: 0 10px 10px 0;
    outline: none;
}

.filter-remove{
    padding-right: 0.1em;
}
.filter-add{
    border-radius: 10px;
    border-style: dotted;
    border-width: 2px;
}
.filter-add > *{
    margin: auto;
}
/* ... */

